[gd_scene load_steps=6 format=3 uid="uid://cbowshwkk4pa1"]

[ext_resource type="Script" uid="uid://ioa8bjdwixwg" path="res://Scripts/menu.gd" id="1_1rerr"]
[ext_resource type="FontFile" uid="uid://cq2y4rgww3m58" path="res://Fonts/One Slice.otf" id="2_xhh6f"]

[sub_resource type="FontVariation" id="FontVariation_cayip"]
base_font = ExtResource("2_xhh6f")

[sub_resource type="FontVariation" id="FontVariation_u4yt8"]
base_font = SubResource("FontVariation_cayip")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1rerr"]
bg_color = Color(0.20392157, 0.20392157, 0.20392157, 0)

[node name="Menu" type="Control"]
layout_direction = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1rerr")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.14406255, 0.14406255, 0.14406255, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_direction = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.06423611
anchor_top = 0.31790122
anchor_right = 0.40711805
anchor_bottom = 0.83950615
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25
metadata/_edit_use_anchors_ = true

[node name="Iniciar" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = SubResource("FontVariation_u4yt8")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_1rerr")
text = "JUGAR
"

[node name="Opciones" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = SubResource("FontVariation_u4yt8")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_1rerr")
text = "OPCIONES"

[node name="Salir" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = SubResource("FontVariation_u4yt8")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_1rerr")
text = "SALIR"

[node name="MusicaMenu" type="AudioStreamPlayer2D" parent="."]

[connection signal="pressed" from="VBoxContainer/Iniciar" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Opciones" to="." method="_on_opciones_pressed"]
[connection signal="pressed" from="VBoxContainer/Salir" to="." method="_on_salir_pressed"]
